--- a/Listas/style2.css
+++ b/Listas/style2.css
@@ -11,9 +11,48 @@ body {
     font-size: 20px;
 }
 
+.menu {
+    margin-bottom: 10%;
+}
+
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.menu li {
+    float: left;
+    border-right: 1px solid #FFF;
+}
+
+.menu li:last-child {
+    border-right: none;
+}
+
+.menu li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.menu li a:hover:not(.active) {
+    background-color: #04AA6D;
+}
+
+.menu .active {
+    background-color: #04AA6D;
+}
+
 .container {
-    width: 50%;
-    height: 60%;
     border: 2px solid;
-    padding: 30px 0px 48px 45px;
+    padding: 30px 48px 48px 45px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
